<resources>
    <string name="app_name">Good Habit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="about_title">About</string>
    <string name="about_content">Welcome to check our site: \n<a href="market://details?id=com.habit.devhabit">market link</a></string>
    <string name="max_connected_days_now">Accomplished days : </string>
    <string name="max_connected_days_ever">Max lasted days ever : </string>

    <string name="habit_form">Create a new habit</string>
    <string name="habit_form_name">Habit name</string>
    <string name="habit_form_description">Habit description</string>
    <string name="habit_form_reasons">Habit reasons</string>
    <string name="habit_form_start_date">Start date</string>
    <string name="habit_form_schedule">Schedule</string>

    <string name="hint_input_target_name">Give the habit a name</string>
    <string name="hint_input_target_desc">Give the habit a description</string>
    <string name="hint_input_target_reasons">Give the habit reasons</string>
    <string name="hint_input_target_start_date">Give the habit a start date ex: 2016-04-01</string>
    <string name="hint_input_target_schedule">Give the habit a schedule</string>

    <string name="target_menu_modify">Modify</string>
    <string name="target_menu_delete">Delete</string>

    <string name="target_dialog_content_modified_title">Content modified</string>
    <string name="target_dialog_content_modified_content">The content has been modified, save before leave?</string>
    <string name="save">Save</string>
    <string name="leave_without_saving">Keep leaving</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <string name="take_a_photo">Take a gift photo</string>

    <string name="sample_1">Hug families</string>
    <string name="sample_2">Kiss someone close to you</string>
    <string name="sample_3">Read for 30mins</string>
    <string name="sample_4">Exercise for 30mins</string>

    <string name="cold_start_dlg_content">我好棒棒，每天都要比昨天更棒棒。\n\n點擊日期來完成每日的棒棒。</string>
    <string name="first_launch_dlg_content">首次進入會給四個棒棒目標，分別關於家庭、親密關係、專業、健康，四個棒棒目標，你可以決定新增或修改這些棒棒目標。</string>
    <string name="complete_today_target">你好棒棒，完成了今天的棒棒目標！</string>

    <string name="notification_title">好棒棒</string>
    <string name="notification_content">親愛的，棒棒時間到囉！</string>
</resources>
