<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal" android:layout_width="match_parent"
android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_form_name"
        />
    <include android:id="@+id/divider_target_name" layout="@layout/divider" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_form_description"/>
    <include android:id="@+id/divider_target_desc" layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_form_reasons"/>
    <include android:id="@+id/divider_target_reasons" layout="@layout/divider" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_form_start_date"/>
    <include android:id="@+id/divider_target_start_date" layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_form_schedule"/>
    <include android:id="@+id/divider_target_schedule_form" layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <include android:id="@+id/divider_target_achieved" layout="@layout/divider" />

</LinearLayout>