<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:elevation="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_form_name"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/input_target_name"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_target_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_form_description"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/input_target_desc"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_target_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_form_reasons"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/input_reasons_1"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_target_reasons" />

        <EditText
            android:id="@+id/input_reasons_2"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />

        <EditText
            android:id="@+id/input_reasons_3"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_form_start_date"
            android:textSize="@dimen/title_font_size"
            android:visibility="gone"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/input_target_start_date"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/hint_input_target_start_date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_form_schedule"
            android:textSize="@dimen/title_font_size"
            android:visibility="gone"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/input_target_schedule_form"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/hint_input_target_schedule" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="test"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/test"
            style="@style/InputEditBoxStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_edit_box_margin"
            android:hint=""
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>
</ScrollView>